--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.13.2",
     "framer-motion": "^12.23.12",
     "heroicons": "^2.2.0",
     "lucide-react": "^0.539.0",
